Fixed logo in dark mode

--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -787,10 +787,6 @@
         #cs-navigation {
             background-color: var(--dark);
 
-            .cs-logo {
-                /* makes it white */
-                filter: grayscale(1) brightness(1000%);
-            }
 
             .cs-top-container {
                 background-color: rgba(0, 0, 0, .2);
